# zk-whitelist

./: .gitignore  Cargo.toml  LICENCE  README.md
examples/: .gitignore  address-proof.json  addresses.txt  verifier.sol  zkToken.sol
src/: main.rs
