[package]
name = "zk_whitelist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"